force-app/main/default/objects/Modal_Settings__c/Modal_Settings__c.object-meta.xml
<CustomObject>
    <label>Modal Setting</label>
    <nameField>
        <label>Modal Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modall Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>