force-app/main/default/objects/Modal_Settings__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Modall Settings</relationshipLabel>
    <relationshipName>Modall_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>