force-app/main/default/objects/Modal_Settings__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Interval to be displayed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>