force-app/main/default/objects/Modal_Settings__c/fields/Last_Date_Shown__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Shown__c</fullName>
    <defaultValue>today()+1</defaultValue>
    <label>Last Date Shown</label>
    <type>Date</type>
</CustomField>