force-app/main/default/objects/Modal_Settings__c/fields/Modal__c.field-meta.xml
<CustomField>
    <fullName>Modal__c</fullName>
    <label>Modal</label>
    <referenceTo>Modal__c</referenceTo>
    <relationshipLabel>Modall Settings</relationshipLabel>
    <relationshipName>Modall_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>