force-app/main/default/objects/Modal_Settings__c/fields/Never_Show__c.field-meta.xml
<CustomField>
    <fullName>Never_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Never Show</label>
    <type>Checkbox</type>
</CustomField>