force-app/main/default/objects/Modal_Settings__c/fields/Object_Page__c.field-meta.xml
<CustomField>
    <fullName>Object_Page__c</fullName>
    <description>looks at url and sees if the object of the page in the url matches the modal setting. This is to allow for multiple modals on object pages.</description>
    <label>Object Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>