force-app/main/default/objects/Modal_Settings__c/fields/ShowModal__c.field-meta.xml
<CustomField>
    <fullName>ShowModal__c</fullName>
    <description>Formula to determine if modal should be shown</description>
    <formula>Modal__r.isActive__c &amp;&amp; 
   Never_Show__c == false &amp;&amp;
   Last_Date_Shown__c +Interval__c &lt;= today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowModal</label>
    <type>Checkbox</type>
</CustomField>