force-app/main/default/objects/Modal_Settings__c/fields/Times_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Times_Clicked__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Times Clicked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>